--- a/Module-3/css/style.css
+++ b/Module-3/css/style.css
@@ -1,1 +1,140 @@
 
+* {
+	box-sizing: border-box;
+}
+
+h1 {
+	font-family: fantasy;
+	color: #000000;
+}
+
+body {
+	
+	background-color: #FFFFFF;
+
+}
+
+p {
+	font-family: fantasy;
+	padding: 10px;
+	margin: 0;
+}
+
+.container {
+	border: none;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	padding: 10px;
+}
+
+section {
+	border:	1px solid black;
+	background-color: #424242;
+	width: 100%;
+	height: auto;
+	font-family: fantasy;
+	color: white;
+	position: relative;
+	overflow: auto;
+}
+
+#Chocolate {
+	border: 1px solid black;
+	text-align: center;
+	width: 30%;
+	margin-left: 70%;
+	font-family: fantasy;
+	font-weight: bold;
+	font-size: 125%;
+	margin-bottom: 0;
+	margin-top: 0;
+	padding: 5px;
+	background-color: #FF5252;
+}
+
+#Cake {
+	border: 1px solid black;
+	text-align: center;
+	width: 30%;
+	margin-left: 70%;
+	font-family: fantasy;
+	font-weight: bold;
+	font-size: 125%;
+	margin-bottom: 0;
+	margin-top: 0;
+	padding: 5px;
+	background-color: #0097A7;
+}
+
+#IceCream {
+	border: 1px solid black;
+	text-align: center;
+	width: 30%;
+	margin-left: 70%;
+	font-family: fantasy;
+	font-weight: bold;
+	font-size: 125%;
+	margin-bottom: 0;
+	margin-top: 0;
+	background-color: #5E35B1;
+	padding: 5px;
+}
+
+#Chocolate-div {
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+#Cake-div {
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+#IceCream-div {
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.navbar-brand {
+  font-size: 1.5em;
+  border: 0 0 10px 10px;
+  color: #FFFFFF;
+}
+
+#header-nav {
+  border: 0;
+  background-color: #616161;
+  color: #000000;
+}
+
+.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
+  border: 1px solid #FFFFFF;
+}
+.navbar-header button.navbar-toggle {
+  clear: both;
+  margin-top: -50px;
+}
+
+.nav-header {
+  background-color: #FFFFFF;
+}
+
+.nav-brand {
+  color: #FFFFFF;
+  font-size: 1.5em;
+}
+
+#nav-list {
+  color: white;
+}
+
+hr {
+  border-color: white;
+}
+
+.item {
+  color: white;
+  font-size: 1.5em;
+}
